# FastAPI-authentications-using-union-architecture

./: .gitignore  README.md  pyproject.toml  runserver.py
app/: config.py  main.py
app/db/: database.py  models.py
app/dependencies/: depends.py
app/repository/: auth_repo.py  base_repo.py  users_repo.py
app/repository/user/: auth.py
app/routers/: auth.py  uploads.py  user.py
app/schema/: global_schema.py  user_schema.py
app/service/: auth_service.py  users.py
app/views/: pwd_hashing.py
